final Readme update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading bg-primary text-white">
+            <div class="col-12 jumbotron mb-3 team-heading bg-danger text-white">
                 <h1 class="text-center">MY EMPLOYEE TEAM</h1>
             </div>
         </div>
@@ -24,43 +24,43 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 
   <div class="card employee-card">
-      <div class="card-header bg-success text-white">
-          <h2 class="card-title">rima</h2>
+      <div class="card-header bg-info text-white">
+          <h2 class="card-title">Rima Odolski</h2>
           <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
       </div>
       <div class="card-body">
           <ul class="list-group">
-              <li class="list-group-item">ID: 4</li>
-              <li class="list-group-item">Email: <a href="mailto:rima@gmail.com">rima@gmail.com</a></li>
-              <li class="list-group-item">Office number: 56</li>
+              <li class="list-group-item">ID: 1</li>
+              <li class="list-group-item">Email: <a href="mailto:rima@geo.com">rima@geo.com</a></li>
+              <li class="list-group-item">Office number: 34</li>
           </ul>
       </div>
   </div>
   
 <div class="card employee-card">
-    <div class="card-header bg-info text-white">
-        <h2 class="card-title">mo</h2>
+    <div class="card-header bg-dark text-white">
+        <h2 class="card-title">Geo the good dog </h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 33</li>
-            <li class="list-group-item">Email: <a href="mailto:mo@mo.com">mo@mo.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/momo" target="_blank" rel="noopener noreferrer">momo</a></li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:geo@geo.com">geo@geo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/geo123" target="_blank" rel="noopener noreferrer">geo123</a></li>
         </ul>
     </div>
 </div>
 
     <div class="card employee-card">
         <div class="card-header bg-warning">
-            <h2 class="card-title">geo</h2>
+            <h2 class="card-title">Leo the good cat</h2>
             <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: 4</li>
-                <li class="list-group-item">Email: <a href="mailto:geo@kitty.com">geo@kitty.com</a></li>
-                <li class="list-group-item">College: undefined</li>
+                <li class="list-group-item">ID: 3</li>
+                <li class="list-group-item">Email: <a href="mailto:leo@geo.com">leo@geo.com</a></li>
+                <li class="list-group-item">College: kitty school for the cats</li>
             </ul>
         </div>
     </div>
