new snippet for readme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading bg-danger text-white">
-                <h1 class="text-center">MY EMPLOYEE TEAM</h1>
+                <h1 class="text-center">MY AWESOME TEAM</h1>
             </div>
         </div>
     </div>
